# certbot-plugin-gandi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  license  pyproject.toml  setup.py
.github/workflows/: test.yml
certbot_dns_gandi/: gandi_api.py  main.py
certbot_plugin_gandi/: gandi_api.py  main.py
contrib/: certbot-dns-gandi-renew.service  certbot-dns-gandi-renew.timer
dev/: README.md  dev_shell.sh  readme.md
dev/tools/: initfile.sh
