[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certbot-dns-gandi"
description = "Certbot plugin for authentication using Gandi LiveDNS"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.9"

authors = [
    { name = "Yohann Leon", email = "yohann@leon.re" },
]

dependencies = [
    "certbot>=2.4.0,<4",
    "requests>=2.32.3,<3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.entry-points."certbot.plugins"]
dns-gandi = "certbot_dns_gandi.main:Authenticator"

[project.urls]
Homepage = "https://github.com/obynio/certbot-plugin-gandi"

[tool.hatch.version]
path = "certbot_dns_gandi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/certbot_dns_gandi",
]
exclude = [
    "/dist/",
    "/tmp/",
    "gandi.ini",
]
